--- a/package.json
+++ b/package.json
@@ -42,5 +42,21 @@
     "last 2 versions",
     "> 1%",
     "not dead"
-  ]
+  ],
+  "dependencies": {
+    "apollo-boost": "^0.1.23",
+    "apollo-server-express": "^2.3.1",
+    "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "graphql-tools": "^4.0.3",
+    "jshint": "^2.9.7",
+    "mobx": "^5.8.0",
+    "react": "^16.7.0",
+    "react-apollo": "^2.3.3",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1"
+  }
 }
