--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "graphql-tools": "^4.0.3",
     "jshint": "^2.9.7",
     "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
