--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "not dead"
   ],
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "apollo-boost": "^0.1.23",
     "apollo-server-express": "^2.3.1",
     "bcrypt": "^3.0.3",
