--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "html-srcsets-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
     "imagemin": "^6.0.0",
-    "imagemin-pngquant": "^7.0.0",
-    "mini-css-extract-plugin": "^0.5.0",
+    "imagemin-pngquant": "^6.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
@@ -52,10 +52,14 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "firebase": "^5.8.0",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
     "jshint": "^2.9.7",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "mongoose": "^5.4.4",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
