--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "jshint": "^2.9.7",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "multer": "^1.4.1",
+    "path": "^0.12.7",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
