--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   ],
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@ffmpeg-installer/ffmpeg": "^1.0.17",
+    "@ffprobe-installer/ffprobe": "^1.0.9",
     "apollo-boost": "^0.1.23",
     "apollo-server-express": "^2.3.1",
     "bcrypt": "^3.0.3",
@@ -52,15 +54,19 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs": "^0.0.1-security",
     "graphql-tools": "^4.0.3",
     "jshint": "^2.9.7",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "multer": "^1.4.1",
+    "nodemon": "^1.18.9",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "video-stitch": "^1.6.0"
   }
 }
