--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "firebase": "^5.8.1",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
     "graphql-tools": "^4.0.3",
