server returns url and gives random name to clip

--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
     "jshint": "^2.9.7",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "mongoose": "^5.4.4",
     "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "path": "^0.12.7",
-    "mongoose": "^5.4.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
+    "uniqid": "^5.0.3",
     "video-stitch": "^1.6.0"
   }
 }
