--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,11 @@
 {
   extends: "stylelint-config-devine",
+  "rules": {
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ],
+  }
 }
